--- a/ClassLibrary_OPLabs/ClassLibrary_OPLabs.csproj
+++ b/ClassLibrary_OPLabs/ClassLibrary_OPLabs.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.5" />
+  </ItemGroup>
+
+	
 
 </Project>
