--- a/WinForms_OPLabs/WinForms_OPLabs.csproj
+++ b/WinForms_OPLabs/WinForms_OPLabs.csproj
@@ -9,7 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary_OPLabs\ClassLibrary_OPLabs.csproj" />
+    <PackageReference Include="Microsoft.Windows.Compatibility" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary_OPLabsss\ClassLibrary_OPLabsss.csproj" />
   </ItemGroup>
 
 </Project>
