--- a/ClassLibrary_OPLabsss/ClassLibrary_OPLabsss.csproj
+++ b/ClassLibrary_OPLabsss/ClassLibrary_OPLabsss.csproj
@@ -44,11 +44,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Airplane.cs" />
+    <Compile Include="CargoAirplane.cs" />
+    <Compile Include="PassengerAirplane.cs" />
     <Compile Include="Pilot.cs" />
+    <Compile Include="PrivatePassengerAirplane.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
